# webcrawler

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/data/: GestorJSON.h
include/model/: Crawler.h  FailedConnectionException.h  HttpHandler.h  WebpageMetrics.h
include/view/: Visualizador.h
src/data/: GestorJSON.cpp
src/model/: Crawler.cpp  HttpHandler.cpp  WebpageMetrics.cpp
src/view/: Visualizador.cpp
